common-service documentation (#213)
* refactor all mocks, readme and declarations

* refactor all mocks, readme and declarations (#198)

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

* declaration refactor

* electricity - update readme, mock, declaration

* documentation public-initiaitves service - readme-mock-decalration

* 00 dev readme mock declaration (#199)

* declaration refactor

* electricity - update readme, mock, declaration

* readme public-initiaitves service - readme-mock-decalration

---------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

* 00 dev readme mock declaration (#205)

* refactor all mocks, readme and declarations

* declaration refactor

* electricity - update readme, mock, declaration

* documentation public-initiaitves service - readme-mock-decalration

---------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

* update 00 (#206)

* Added Format Changes to unemployment rate

* Added Format chanegs for estimated subsistence minimum

* Added formatting changes for electricity

* Added Formatting changes for public initiatives

* Added format changes for riigikogu

* national-holidays format (#201) (#202)

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

* Added format changes to companies

* Added format changes for national holidays

* fixed recent voting

* Update search.yml

* Fix companies employees

---------

Co-authored-by: 1AhmedYasser <26207361+1AhmedYasser@users.noreply.github.com>
Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>
Co-authored-by: Varmo <101868197+varmoh@users.noreply.github.com>
Co-authored-by: ffrose <119657383+ffrose@users.noreply.github.com>

* update 00 (#207)

* Added Format Changes to unemployment rate

* Added Format chanegs for estimated subsistence minimum

* Added formatting changes for electricity

* Added Formatting changes for public initiatives

* Added format changes for riigiko

--- a/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
@@ -2,11 +2,24 @@ declaration:
   call: declare
   version: 0.1
   name: "Find Holidays Until End of Year"
-  description: |
-    This service returns all holidays from today's date until the end of the year, based on a mock API response of 2024 public holidays.
+  description: "Returns all holidays from today till the end of the year"
   method: get
-  params: []
+  accepts: json
   returns: json
+  allowlist:
+    body:
+    - field: chatId
+      type: string
+      description: "The chat ID for the message"
+    - field: authorId
+      type: string
+      description: "The author ID for the message"
+    - field: today
+      type: string
+      description: "The current date in ISO format - ex. 'yyyy-mm-dd'"
+    - field: yearEnd
+      type: string
+      description: "The end of the year in ISO format - ex. 'yyyy-mm-dd'"
 
 prepare:
   assign:
