--- a/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
@@ -4,7 +4,20 @@ declaration:
   name: "Holiday Search Service"
   description: "Searches for a national holiday by name in the 2024 calendar"
   method: get
+  accepts: json
   returns: json
+  namespace: common-services
+  allowlist:
+    body:
+    - field: chatId
+      type: string
+      description: "The chat ID for the message"
+    - field: authorId
+      type: string
+      description: "The author ID for the message"
+    - field: holidayName
+      type: string
+      description: "Holiday name for which to retrieve holidays - string - ex. 'jaanipäev'"
 
 prepare:
   assign:
