--- a/DSL/Ruuter.public/GET/electricity/lowest-price.yml
+++ b/DSL/Ruuter.public/GET/electricity/lowest-price.yml
@@ -1,11 +1,26 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Lowest electricity Price Service"
-  description: |
-    This service fetches the lowest elering electricity prices for today
-  method: get
+  name: " Electricity Price Service"
+  description: "This service fetches the lowest electricity prices for today"
+  method: post
+  accepts: json
   returns: json
+  namespace: common-services
+  allowlist:
+    body:
+      - field: chatId
+        type: string
+        description: "The chat ID for the message"
+      - field: authorId
+        type: string
+        description: "The author ID for the message"
+      - field: startDateTime
+        type: string
+        description: "Parameter 'startDateTime' - 'yyyy-mm-ddT00:00:00.000Z' - UTC"
+      - field: endDateTime
+        type: string
+        description: "Parameter 'endDateTime'- - 'yyyy-mm-ddT00:00:00.000Z' - UTC"
 
 # Prepare Dates based on userDate
 prepare:
@@ -30,9 +45,7 @@ assignVariables:
   assign:
     minPrice: ${eleringToday.response.body.data.ee.sort((a, b) => a.price - b.price)[0].price}
     minPriceTimestamp: ${eleringToday.response.body.data.ee.sort((a, b) => a.price - b.price)[0].timestamp}
-
-    # currently doez not account for DST when changing to winter
-    tallinnOffset: 7200  # Tallinn is UTC+3 during DST (3 hours in seconds)
+    tallinnOffset: 7200 
     adjustedTimestamp: ${minPriceTimestamp + tallinnOffset} 
     adjustedHour: ${Math.floor((adjustedTimestamp % 86400) / 3600)}
     timeVar: ${("0" + adjustedHour).slice(-2) + ":00"}
