--- a/DSL/Ruuter.public/GET/electricity/mock/lowest-price.yml
+++ b/DSL/Ruuter.public/GET/electricity/mock/lowest-price.yml
@@ -2,22 +2,35 @@ declaration:
   call: declare
   version: 0.1
   name: "MOCK - Electricity Price Service"
-  description: |
-    This service fetches the Nordpool electricity prices for a user-specified date.
-  method: get
-  params:
-    userDate: string  # yyyy-mm-dd format
+  description: "MOCK -This service fetches the lowest electricity prices for today"
+  method: post
+  accepts: json
   returns: json
+  namespace: common-services
+  allowlist:
+    body:
+      - field: chatId
+        type: string
+        description: "The chat ID for the message"
+      - field: authorId
+        type: string
+        description: "The author ID for the message"
+      - field: startDateTime
+        type: string
+        description: "Parameter 'startDateTime' - 'yyyy-mm-ddT00:00:00.000Z' - UTC"
+      - field: endDateTime
+        type: string
+        description: "Parameter 'endDateTime'- - 'yyyy-mm-ddT00:00:00.000Z' - UTC"
 
-# Prepare Dates based on userDate
-prepareDates:
+prepare:
   assign:
-    userDate: ${incoming.params.userDate || new Date().toISOString().split('T')[0]}  # yyyy-mm-dd 
-    startDateTime: ${new Date(new Date(userDate).getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + "T21:00:00.000Z"} # day before at 9am
-    endDateTime: ${userDate + "T20:59:59.000Z"} # chosen date at 9pm - default time format
-  next: getPriceForPeriod
+    chatId: "1010" # ${incoming.params.chatId}
+    authorId: "abc123" # ${incoming.params.authorId}
+    startDateTime: "${new Date(new Date().getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + 'T21:00:00.000Z'}"
+    endDateTime: "${new Date().toISOString().split('T')[0] + 'T20:59:59.000Z'}"
+  next: priceForToday
 
-getPriceForPeriod:
+priceForToday:
   call: reflect.mock
   args:
     request:
@@ -81,14 +94,50 @@ getPriceForPeriod:
 
 assignVariables:
   assign:
-    minPrice: ${eleringToday.response.body.data.ee.sort((a, b) => a.price - b.price)[0].price} # get lowest price
-    minPriceTimestamp: ${eleringToday.response.body.data.ee.sort((a, b) => a.price - b.price)[0].timestamp} # get lowest timestamp
-
-    tallinnOffset: 10800  # Tallinn is UTC+3 during DST (3 hours in seconds)
+    minPrice: ${eleringToday.response.body.data.ee.sort((a, b) => a.price - b.price)[0].price}
+    minPriceTimestamp: ${eleringToday.response.body.data.ee.sort((a, b) => a.price - b.price)[0].timestamp}
+    tallinnOffset: 7200
     adjustedTimestamp: ${minPriceTimestamp + tallinnOffset} 
     adjustedHour: ${Math.floor((adjustedTimestamp % 86400) / 3600)}
     timeVar: ${("0" + adjustedHour).slice(-2) + ":00"}
+  next: assignResponse
+
+assignResponse:
+  assign:
+    res: {
+      "result": "Täna on madalaim elektri börsihind ${minPrice} €/mWh, kell ${timeVar}"
+    }
+  next: formatMessages
+
+formatMessages:
+  call: reflect.mock # http.post
+  args:
+    url: "[#DMAPPER]/common-services/hbs/bot_responses_to_messages"
+    headers:
+      type: json
+    body:
+      data:
+        {
+          "botMessages": "${[res]}",
+          "chatId": "${chatId}",
+          "authorId": "${authorId}",
+          "authorFirstName": "",
+          "authorLastName": "",
+          "authorTimestamp": "${new Date().toISOString()}",
+          "created": "${new Date().toISOString()}",
+        }
+    response:
+      body:
+        - chatId: "1010"
+          content: "Täna on madalaim elektri börsihind 3.82 €/mWh, kell 02:00"
+          buttons: []
+          authorTimestamp: "2024-11-05T12:00:00Z"
+          authorId: "abc123"
+          authorFirstName: ""
+          authorLastName: ""
+          created: "2024-11-05T12:00:00Z"
+  result: formatMessage
   next: returnResult
 
 returnResult:
-  return: ${[userDate, timeVar, minPrice]}
+  return: ${formatMessage.response.body}
