--- a/DSL/Ruuter.public/GET/public-initiatives/most-popular.yml
+++ b/DSL/Ruuter.public/GET/public-initiatives/most-popular.yml
@@ -1,11 +1,38 @@
 declaration:
   call: declare
   version: 0.1
-  description: Provides information for 5 most-popular active initiavites
-  name: "Most Popular Initiatives Service"
-  method: get
+  description: "MOCK - Provides information for 5 most-popular active initiavites"
+  name: "MOCK - Most Popular Initiatives Service"
+  method: post
+  accepts: json
   returns: json
-  namespace:  common-services
+  namespace: common-services
+  allowlist:
+    body:
+      - field: chatId
+        type: string
+        description: "The chat ID for the message"
+      - field: authorId
+        type: string
+        description: "The author ID for the message"
+      - field: phase
+        type: string
+        description: "The phase for the initiatives"
+      - field: signingEndsAt
+        type: string
+        description: "The end date for the initiatives"
+      - field: order
+        type: string
+        description: "The order for the initiatives"
+      - field: limit
+        type: string
+        description: "The limit for the initiatives"
+      - field: rahvalagatus
+        type: string
+        description: "Official rahvaalgatus API"
+      - field: acceptHeader
+        type: string
+        description: "Official accept-header for rahvaalgatus API"
 
 prepareVariables:
   assign:
